// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatePassword should allow visible and hidden passwords 1`] = `
<div>
  <main>
    <h1>
      Your account password
    </h1>
    <p>
      You need a separate password for each account.
    </p>
    <p>
      To protect your account this password has to be secure. A good example would be a sentence of several words with numbers and punctuation, like this:
       
      <code>
        House 12! small DOGS
      </code>
    </p>
    <ul>
      <li
        class=""
      >
        Use both uppercase and lowercase letters
      </li>
      <li
        class=""
      >
        Use numbers
      </li>
      <li
        class=""
      >
        Use punctuation or special characters
      </li>
      <li
        class=""
      >
        Use at least 12 characters in total
      </li>
      <li
        class=""
      >
        Do not use our example
      </li>
    </ul>
    <form>
      <label>
        Please enter your password:
        <input
          autocomplete="new-password"
          minlength="12"
          name="password"
          required=""
          type="password"
        />
      </label>
      <button
        type="button"
      >
        Show
      </button>
      <p
        class="errors"
      />
      <button
        type="submit"
      >
        Next Step
      </button>
    </form>
    <p>
      <a
        href="/account/create/backup"
      >
        Back
      </a>
    </p>
  </main>
</div>
`;

exports[`CreatePassword should allow visible and hidden passwords 2`] = `
<div>
  <main>
    <h1>
      Your account password
    </h1>
    <p>
      You need a separate password for each account.
    </p>
    <p>
      To protect your account this password has to be secure. A good example would be a sentence of several words with numbers and punctuation, like this:
       
      <code>
        House 12! small DOGS
      </code>
    </p>
    <ul>
      <li
        class=""
      >
        Use both uppercase and lowercase letters
      </li>
      <li
        class=""
      >
        Use numbers
      </li>
      <li
        class=""
      >
        Use punctuation or special characters
      </li>
      <li
        class=""
      >
        Use at least 12 characters in total
      </li>
      <li
        class=""
      >
        Do not use our example
      </li>
    </ul>
    <form>
      <label>
        Please enter your password:
        <input
          autocomplete="new-password"
          minlength="12"
          name="password"
          required=""
          type="text"
        />
      </label>
      <button
        type="button"
      >
        Hide
      </button>
      <p
        class="errors"
      />
      <button
        type="submit"
      >
        Next Step
      </button>
    </form>
    <p>
      <a
        href="/account/create/backup"
      >
        Back
      </a>
    </p>
  </main>
</div>
`;

exports[`CreatePassword should allow visible and hidden passwords 3`] = `
<div>
  <main>
    <h1>
      Your account password
    </h1>
    <p>
      You need a separate password for each account.
    </p>
    <p>
      To protect your account this password has to be secure. A good example would be a sentence of several words with numbers and punctuation, like this:
       
      <code>
        House 12! small DOGS
      </code>
    </p>
    <ul>
      <li
        class=""
      >
        Use both uppercase and lowercase letters
      </li>
      <li
        class=""
      >
        Use numbers
      </li>
      <li
        class=""
      >
        Use punctuation or special characters
      </li>
      <li
        class=""
      >
        Use at least 12 characters in total
      </li>
      <li
        class=""
      >
        Do not use our example
      </li>
    </ul>
    <form>
      <label>
        Please enter your password:
        <input
          autocomplete="new-password"
          minlength="12"
          name="password"
          required=""
          type="password"
        />
      </label>
      <button
        type="button"
      >
        Show
      </button>
      <p
        class="errors"
      />
      <button
        type="submit"
      >
        Next Step
      </button>
    </form>
    <p>
      <a
        href="/account/create/backup"
      >
        Back
      </a>
    </p>
  </main>
</div>
`;

exports[`CreatePassword should render 1`] = `
<div>
  <main>
    <h1>
      Your account password
    </h1>
    <p>
      You need a separate password for each account.
    </p>
    <p>
      To protect your account this password has to be secure. A good example would be a sentence of several words with numbers and punctuation, like this:
       
      <code>
        House 12! small DOGS
      </code>
    </p>
    <ul>
      <li
        class=""
      >
        Use both uppercase and lowercase letters
      </li>
      <li
        class=""
      >
        Use numbers
      </li>
      <li
        class=""
      >
        Use punctuation or special characters
      </li>
      <li
        class=""
      >
        Use at least 12 characters in total
      </li>
      <li
        class=""
      >
        Do not use our example
      </li>
    </ul>
    <form>
      <label>
        Please enter your password:
        <input
          autocomplete="new-password"
          minlength="12"
          name="password"
          required=""
          type="password"
        />
      </label>
      <button
        type="button"
      >
        Show
      </button>
      <p
        class="errors"
      />
      <button
        type="submit"
      >
        Next Step
      </button>
    </form>
    <p>
      <a
        href="/account/create/backup"
      >
        Back
      </a>
    </p>
  </main>
</div>
`;

exports[`CreatePassword should report weak password errors 1`] = `
<div>
  <main>
    <h1>
      Your account password
    </h1>
    <p>
      You need a separate password for each account.
    </p>
    <p>
      To protect your account this password has to be secure. A good example would be a sentence of several words with numbers and punctuation, like this:
       
      <code>
        House 12! small DOGS
      </code>
    </p>
    <ul>
      <li
        class="fail"
      >
        Use both uppercase and lowercase letters
      </li>
      <li
        class="fail"
      >
        Use numbers
      </li>
      <li
        class="fail"
      >
        Use punctuation or special characters
      </li>
      <li
        class="fail"
      >
        Use at least 12 characters in total
      </li>
      <li
        class="pass"
      >
        Do not use our example
      </li>
    </ul>
    <form>
      <label>
        Please enter your password:
        <input
          autocomplete="new-password"
          minlength="12"
          name="password"
          required=""
          type="password"
        />
      </label>
      <button
        type="button"
      >
        Show
      </button>
      <p
        class="errors"
      >
        You need to use both uppercase and lowercase letters
      </p>
      <button
        type="submit"
      >
        Next Step
      </button>
    </form>
    <p>
      <a
        href="/account/create/backup"
      >
        Back
      </a>
    </p>
  </main>
</div>
`;

exports[`CreatePassword should report weak password errors 2`] = `
<div>
  <main>
    <h1>
      Your account password
    </h1>
    <p>
      You need a separate password for each account.
    </p>
    <p>
      To protect your account this password has to be secure. A good example would be a sentence of several words with numbers and punctuation, like this:
       
      <code>
        House 12! small DOGS
      </code>
    </p>
    <ul>
      <li
        class="pass"
      >
        Use both uppercase and lowercase letters
      </li>
      <li
        class="fail"
      >
        Use numbers
      </li>
      <li
        class="fail"
      >
        Use punctuation or special characters
      </li>
      <li
        class="fail"
      >
        Use at least 12 characters in total
      </li>
      <li
        class="pass"
      >
        Do not use our example
      </li>
    </ul>
    <form>
      <label>
        Please enter your password:
        <input
          autocomplete="new-password"
          minlength="12"
          name="password"
          required=""
          type="password"
        />
      </label>
      <button
        type="button"
      >
        Show
      </button>
      <p
        class="errors"
      >
        You need to use at least one number
      </p>
      <button
        type="submit"
      >
        Next Step
      </button>
    </form>
    <p>
      <a
        href="/account/create/backup"
      >
        Back
      </a>
    </p>
  </main>
</div>
`;

exports[`CreatePassword should report weak password errors 3`] = `
<div>
  <main>
    <h1>
      Your account password
    </h1>
    <p>
      You need a separate password for each account.
    </p>
    <p>
      To protect your account this password has to be secure. A good example would be a sentence of several words with numbers and punctuation, like this:
       
      <code>
        House 12! small DOGS
      </code>
    </p>
    <ul>
      <li
        class="pass"
      >
        Use both uppercase and lowercase letters
      </li>
      <li
        class="pass"
      >
        Use numbers
      </li>
      <li
        class="fail"
      >
        Use punctuation or special characters
      </li>
      <li
        class="fail"
      >
        Use at least 12 characters in total
      </li>
      <li
        class="pass"
      >
        Do not use our example
      </li>
    </ul>
    <form>
      <label>
        Please enter your password:
        <input
          autocomplete="new-password"
          minlength="12"
          name="password"
          required=""
          type="password"
        />
      </label>
      <button
        type="button"
      >
        Show
      </button>
      <p
        class="errors"
      >
        You need to use at least one special character
      </p>
      <button
        type="submit"
      >
        Next Step
      </button>
    </form>
    <p>
      <a
        href="/account/create/backup"
      >
        Back
      </a>
    </p>
  </main>
</div>
`;

exports[`CreatePassword should report weak password errors 4`] = `
<div>
  <main>
    <h1>
      Your account password
    </h1>
    <p>
      You need a separate password for each account.
    </p>
    <p>
      To protect your account this password has to be secure. A good example would be a sentence of several words with numbers and punctuation, like this:
       
      <code>
        House 12! small DOGS
      </code>
    </p>
    <ul>
      <li
        class="pass"
      >
        Use both uppercase and lowercase letters
      </li>
      <li
        class="pass"
      >
        Use numbers
      </li>
      <li
        class="pass"
      >
        Use punctuation or special characters
      </li>
      <li
        class="fail"
      >
        Use at least 12 characters in total
      </li>
      <li
        class="pass"
      >
        Do not use our example
      </li>
    </ul>
    <form>
      <label>
        Please enter your password:
        <input
          autocomplete="new-password"
          minlength="12"
          name="password"
          required=""
          type="password"
        />
      </label>
      <button
        type="button"
      >
        Show
      </button>
      <p
        class="errors"
      >
        You need to use at least $minimum$ characters
      </p>
      <button
        type="submit"
      >
        Next Step
      </button>
    </form>
    <p>
      <a
        href="/account/create/backup"
      >
        Back
      </a>
    </p>
  </main>
</div>
`;

exports[`CreatePassword should report weak password errors 5`] = `
<div>
  <main>
    <h1>
      Your account password
    </h1>
    <p>
      You need a separate password for each account.
    </p>
    <p>
      To protect your account this password has to be secure. A good example would be a sentence of several words with numbers and punctuation, like this:
       
      <code>
        House 12! small DOGS
      </code>
    </p>
    <ul>
      <li
        class="pass"
      >
        Use both uppercase and lowercase letters
      </li>
      <li
        class="pass"
      >
        Use numbers
      </li>
      <li
        class="pass"
      >
        Use punctuation or special characters
      </li>
      <li
        class="pass"
      >
        Use at least 12 characters in total
      </li>
      <li
        class="pass"
      >
        Do not use our example
      </li>
    </ul>
    <form>
      <label>
        Please enter your password:
        <input
          autocomplete="new-password"
          minlength="12"
          name="password"
          required=""
          type="password"
        />
      </label>
      <button
        type="button"
      >
        Show
      </button>
      <p
        class="errors"
      />
      <button
        type="submit"
      >
        Next Step
      </button>
    </form>
    <p>
      <a
        href="/account/create/backup"
      >
        Back
      </a>
    </p>
  </main>
</div>
`;
